# M2AD

./: README.md  main.ipynb  main.py  notes.ipynb  notes2.ipynb  presentation.ipynb  pyproject.toml  requirements.txt
