[project]
name = "m2ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastparquet>=2024.11.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pcse>=6.0.12",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "statsmodels>=0.14.5",
]
